2002-08-27  Martin Baulig  <martin@gnome.org>

	* trampoline.c (mono_generic_trampoline_code): New global variable.
	(arch_create_jit_trampoline): Use the new global variable to store the
	generic trampoline code instead of using a static one.  This allows the
	debugger to access this variable to check whether a method is a trampoline.

	* debug.h (mono_generic_trampoline_code): Added external declaration.

2002-08-27  Martin Baulig  <martin@gnome.org>

	* debug.c (MonoDebugHandle): Moved the method hash into the
	AssemblyDebugInfo struct since we need to use a separate hash for each
	MonoImage.

	* debug.c: Added special undocumented command line argument to create a
	symbol file for IL files on-the-fly.  In this case, we also need to create
	the IL files and parse them.
	(mono_debugger_internal_get_symbol_files): Return something more reasonable.

2002-08-26  Martin Baulig  <martin@gnome.org>

	* debug.c (mono_debugger_internal_free_symbol_files): New function.
	(mono_debugger_internal_symbol_files_changed): New global variable.

2002-08-24  Martin Baulig  <martin@gnome.org>

	* debug.c (mono_debugger_internal_get_symbol_files): New function.

2002-08-24  Martin Baulig  <martin@gnome.org>

	* debug.c (mono_debug_write_symbols): Added support for the new
	debugging format.

	* mono.c (main): The `--debug' argument now knows about a new
	debugging format `mono' which will be used to display source lines
	in backtraces.

	* debug.h (MonoDebugFormat): Added a new MONO_DEBUG_FORMAT_MONO
	which will be used when displaying backtraces.  It reads a new
	binary symbol file.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* jit.c (match_debug_method): Don't include runtime invoke methods
	in the search.

	* mono.c (main): Accept `Main' as argument to --break to insert a
	breakpoint on the application's main method.

2002-08-23  Martin Baulig  <martin@gnome.org>

	* debug-dwarf2.c (dwarf2_write_class_field): Don't include any static fields.
	